--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,7 +18,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
+      <th>
+        <%= link_to "Movie Title", movie_path(clicked => true) %>
+      </th>
       <th>Rating</th>
       <th>Release Date</th>
       <th>More Info</th>
