movie title route #3

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -19,7 +19,7 @@
   <thead>
     <tr>
       <th>
-        <%= link_to "Movie Title", movie_path(:clicked => true) %>
+        <%= link_to "Movie Title", movies_path(:movie_title => true) %>
       </th>
       <th>Rating</th>
       <th>Release Date</th>
