--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -19,10 +19,12 @@
   <thead>
     <tr>
       <th>
-        <%= link_to "Movie Title", movies_path(:movie_title => true) %>
+        <%= link_to "Movie Title", movies_path(:sorted => "title"), id: 'title_header' %>
       </th>
       <th>Rating</th>
-      <th>Release Date</th>
+      <th>
+        <%= link_to "Release Date", movies_path(:sorted => "date"), id: 'release_date_header'  %>
+      </th>
       <th>More Info</th>
     </tr>
   </thead>
