--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,7 +18,7 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>
+      <th, :class => 'hilite', , :class => 'p-3 mb-2 bg-warning text-dark'>
         <%= link_to "Movie Title", movies_path(:sorted => "title"), id: 'title_header' %>
       </th>
       <th>Rating</th>
