--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,7 +18,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <%= link_to "Movie Title", movies_path(:sorted => "title"), id: 'title_header', :class => 'hilite', :class => 'p-3 mb-2 bg-warning text-dark' %>
+      <th class = 'p-3 mb-2 bg-warning text-dark'>
+        <%= link_to "Movie Title", movies_path(:sorted => "title"), id: 'title_header', :class => 'hilite' %>
+      </th>
       <th>Rating</th>
       <th>
         <%= link_to "Release Date", movies_path(:sorted => "date"), id: 'release_date_header'  %>
