--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,11 +18,11 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th class = 'p-3 mb-2 bg-warning text-dark'>
-        <%= link_to "Movie Title", movies_path(:sorted => "title"), id: 'title_header', :class => 'hilite' %>
+      <th class = @movie_class>
+        <%= link_to "Movie Title", movies_path(:sorted => "title"), id: 'title_header'%>
       </th>
       <th>Rating</th>
-      <th>
+      <th class = @release_date_class>
         <%= link_to "Release Date", movies_path(:sorted => "date"), id: 'release_date_header'  %>
       </th>
       <th>More Info</th>
