--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -23,7 +23,7 @@
       </th>
       <th>Rating</th>
       <th class = @release_date_class>
-        <%= link_to "Release Date", movies_path(:sorted => "date"), id: 'release_date_header'  %>
+        <%= link_to "Release Date", movies_path(:sorted => "date"), id: 'release_date_header', :class => @release_date_class  %>
       </th>
       <th>More Info</th>
     </tr>
