--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -19,7 +19,7 @@
   <thead>
     <tr>
       <th class = @movie_class>
-        <%= link_to "Movie Title", movies_path(:sorted => "title"), id: 'title_header', :class => @movie_class%>
+        <%= link_to "Movie Title", :class => @movie_class, movies_path(:sorted => "title"), id: 'title_header'%>
       </th>
       <th>Rating</th>
       <th class = @release_date_class>
