--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -22,9 +22,9 @@
         <%= link_to "Movie Title", :class => @movie_class, :name => movies_path(:sorted => "title"), id: 'title_header'%>
       </th>
       <th>Rating</th>
-      <th class = @release_date_class>
+      <th >
         <%= link_to "Release Date", movies_path(:sorted => "date"), id: 'release_date_header', :class => @release_date_class  %>
-      </th>
+      <class = @release_date_class /th>
       <th>More Info</th>
     </tr>
   </thead>
