--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -19,11 +19,11 @@
   <thead>
     <tr>
       <th class = @movie_class>
-        <%= link_to "Movie Title", :class => @movie_class, :name => movies_path(:sorted => "title"), id: 'title_header'%>
+        <%= link_to "Movie Title", :name => movies_path(:sorted => "title"), id: 'title_header'%>
       </th>
       <th>Rating</th>
-      <th >
-        <%= link_to "Release Date", movies_path(:sorted => "date"), id: 'release_date_header', :class => @release_date_class  %>
+      <th>
+        <%= link_to "Release Date", movies_path(:sorted => "date"), id: 'release_date_header'%>
       <class = @release_date_class /th>
       <th>More Info</th>
     </tr>
