--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -19,7 +19,7 @@
   <thead>
     <tr>
       <th class = @movie_class>
-        <%= link_to "Movie Title", :name => movies_path(:sorted => "title", :ratings = @ratings_hash), id: 'title_header'%>
+        <%= link_to "Movie Title", :name => movies_path(:sorted => "title", :ratings => @ratings_hash), id: 'title_header'%>
       </th>
       <th>Rating</th>
       <th>
