--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -19,12 +19,12 @@
   <thead>
     <tr>
       <th class = @movie_class>
-        <%= link_to "Movie Title", :name => movies_path(:sorted => "title"), id: 'title_header'%>
+        <%= link_to "Movie Title", movies_path(:sorted => "title"), id: 'title_header'%>
       </th>
       <th>Rating</th>
       <th>
         <%= link_to "Release Date", movies_path(:sorted => "date"), id: 'release_date_header'%>
-      <class = @release_date_class /th>
+      </th>
       <th>More Info</th>
     </tr>
   </thead>
