--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -22,8 +22,8 @@
         <%= link_to "Movie Title", movies_path(:sorted => "title", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'title_header'%>
       </th>
       <th>Rating</th>
-      <th>
-        <%= link_to "Release Date", movies_path(:sorted => "date"), id: 'release_date_header'%>
+      <th = @release_date_class>
+        <%= link_to "Release Date", movies_path(:sorted => "date", , :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'release_date_header'%>
       </th>
       <th>More Info</th>
     </tr>
