--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -12,18 +12,17 @@
   <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
 <% end %>
 
-<%#  Part 2: Start here... %>
+<%= link_to "Movie Title", movies_path(:sorted => "title", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'title_header'%>
 
 
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
       <th class = @movie_class>
-        <%= link_to "Movie Title", movies_path(:sorted => "title", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'title_header'%>
       </th>
       <th>Rating</th>
       <th = @release_date_class>
-        <%= link_to "Release Date", movies_path(:sorted => "date", , :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'release_date_header'%>
+        <%= link_to "Release Date", movies_path(:sorted => "date", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'release_date_header'%>
       </th>
       <th>More Info</th>
     </tr>
