--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -19,6 +19,7 @@
   <thead>
     <tr>
       <th class = @movie_class>
+      Movie Title
       </th>
       <th>Rating</th>
       <th = @release_date_class>
