--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,7 +18,7 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th class = @movie_class>
+      <th class = 'hilite p-3 mb-2 bg-warning text-dark'>
       Movie Title
       </th>
       <th>Rating</th>
