--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -12,14 +12,13 @@
   <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
 <% end %>
 
-<%= link_to "Movie Title", movies_path(:sorted => "title", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'title_header'%>
 
 
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th class = 'hilite p-3 mb-2 bg-warning text-dark'>
-      Movie Title
+      <th= link_to "Movie Title", movies_path(:sorted => "title", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'title_header'>
+      <%%>
       </th>
       <th>Rating</th>
       <th = @release_date_class>
