--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,7 +17,8 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th{:class=>("hilite" if @sort_column == "title")}= link_to 'Movie Title', movies_path(:sorted => 'title'), :id=>"title_header">
+      <th{:class => ("hilite" if @sort_column == "title")}
+        <%= link_to 'Movie Title', movies_path(:sorted => 'title'), :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), :id=>"title_header">
       </th>
       <th>Rating</th>
       <th = @release_date_class>
