--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,7 +18,7 @@
   <thead>
     <tr>
       <th class = @movie_class>
-        <%= link_to 'Movie Title', movies_path(:sorted => 'title'), :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), :id=>"title_header">
+        <%= link_to 'Movie Title', movies_path(:sorted => 'title', :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), :id=>"title_header">
       </th>
       <th>Rating</th>
       <th = @release_date_class>
