--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,12 +17,12 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th class>
+      <th>
         <%= link_to 'Movie Title', movies_path(:sorted => 'title', :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: "title_header", :class => @movie_class%>
       </th>
       <th>Rating</th>
       <th = @release_date_class>
-        <%= link_to "Release Date", movies_path(:sorted => "date", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'release_date_header'%>
+        <%= link_to "Release Date", movies_path(:sorted => "date", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'release_date_header', :class => @release_date_class%>
       </th>
       <th>More Info</th>
     </tr>
