--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,7 +17,7 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <%th {:class => @movie_class}= link_to 'Movie Title', movies_path(:sorted => 'title', :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: "title_header" %>
+      <th class= <%= @movie_class %>><%= link_to 'Movie Title', movies_path(:sorted => 'title', :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: "title_header"%></th>
       <th>Rating</th>
       <th>
         <%= link_to "Release Date", movies_path(:sorted => "date", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'release_date_header', :class => @release_date_class%>
