--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -9,6 +9,7 @@
       <%= check_box_tag "ratings[#{rating}]", "1",  @ratings_to_show.include?(rating), class: 'form-check-input' %>
     </div>
   <% end %>
+  <%= ratings_form.hidden_field :sorted, value: @sorted %>
   <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
 <% end %>
 
@@ -19,8 +20,8 @@
     <tr>
       <th class= '<%= @movie_class %>'><%= link_to 'Movie Title', movies_path(:sorted => 'title', :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: "title_header"%></th>
       <th>Rating</th>
-      <th>
-        <%= link_to "Release Date", movies_path(:sorted => "date", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'release_date_header', :class => @release_date_class%>
+      <th class= '<%= @release_date_class %>'>
+        <%= link_to "Release Date", movies_path(:sorted => "date", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'release_date_header'%>
       </th>
       <th>More Info</th>
     </tr>
