--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -11,7 +11,7 @@
   <% end %>
   <% puts @sorted %>
   <%= hidden_field_tag "sorted", @sorted %>
-  <%= hidden_field_tag "home", 1 %>
+  <%= hidden_field_tag "home", "1" %>
   <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
 <% end %>
 
@@ -21,11 +21,11 @@
   <thead>
     <tr>
       <th class= '<%= @movie_class %>'>
-        <%= link_to 'Movie Title', movies_path(:home => 1,:sorted => 'title', :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: "title_header"%>
+        <%= link_to 'Movie Title', movies_path(:home => "1",:sorted => 'title', :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: "title_header"%>
       </th>
       <th>Rating</th>
       <th class= '<%= @release_date_class %>'>
-        <%= link_to "Release Date", movies_path(:home => 1, :sorted => "date", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'release_date_header'%>
+        <%= link_to "Release Date", movies_path(:home => "1", :sorted => "date", :ratings => Hash[@ratings_to_show.collect { |item| [item, "1"] } ]), id: 'release_date_header'%>
       </th>
       <th>More Info</th>
     </tr>
